fixed css layout issues with new JSscript warning

--- a/trunk/gbif-providertool/src/main/webapp/styles/simplicity/providertool.css
+++ b/trunk/gbif-providertool/src/main/webapp/styles/simplicity/providertool.css
@@ -110,37 +110,19 @@ table.layout tr th {
 #logo {
 	top: 15px;
 	position: relative;
-}
-
-#currentResourceClass {
-	background-color: #D7E9F5;
-	color: #ffffff;
-	text-align: center;
-	position: relative;
-	top: 105px;
-	width: 90px;
-	float: right;
-	right: -105px;
-	z-index: 4;
-	padding: 2px;
-}
-
-div#header .left {
-        float: left;
-}
-
-div#header .right {
-        padding: 0 39px;
-        float: right;
+	left: 360px;
 }
 
 div#jsalert {
-	float: left;
+	float: none;
 	width: 300px;
 	font-style: italic;
 	color: gray;
 	padding: 10px 0 0;
 	margin: 0;
+	position: relative;
+	left: 525px;
+	top: -80px;
 }
 div#jsalert h2 {
 	font-style: bold italic;
@@ -148,6 +130,19 @@ div#jsalert h2 {
 	margin: 0;
 }
 
+#currentResourceClass {
+	background-color: #D7E9F5;
+	color: #ffffff;
+	text-align: center;
+	position: relative;
+	width: 90px;
+	float: right;
+	z-index: 4;
+	padding: 2px;
+	clear: both;
+	top: 23px;
+	left: -40px;
+}
 
 /* @end */
 
